# job-hunter-ai

./: .gitignore  docker-compose.yml  dockerfile  frontend.py  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: application.py
app/core/: config.py
app/db/: session.py
app/models/: job.py
app/schemas/: job.py
app/services/: auto_filler.py  llm_service.py  pdf_service.py  resume_optimizer.py  scraper_service.py
app/tools/: scraping_tools.py
