[tool.poetry]
name = "job-hunter-ai"
version = "0.1.0"
description = "Professional AI Job Agent"
authors = ["Sanchit <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
langchain = "^1.2.3"
playwright = "^1.41.0"
beautifulsoup4 = "^4.12.0"
greenlet = "^3.0.3"
tiktoken = "^0.12.0"
asyncpg = "^0.31.0"
langchain-google-genai = "^4.2.0"
markdown = "^3.10"
tenacity = "^9.1.2"
requests = "^2.32.5"
streamlit = "^1.53.0"
pypdf = "^6.6.0"
pdfkit = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"